tests/backend/zero_alloc_checker/fail5.output
File "fail5.ml", line 2, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail5.test (camlFail5.test_HIDE_STAMP)
